force-app/main/default/objects/Rating__c/Rating__c.object-meta.xml
<CustomObject>
    <label>Rating</label>
    <nameField>
        <label>Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ratings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>