force-app/main/default/objects/Rating__c/fields/Movie__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>