force-app/main/default/objects/Rating__c/fields/Stars__c.field-meta.xml
<CustomField>
    <fullName>Stars__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Stars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>