force-app/main/default/objects/Rating__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>Movie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Movie</label>
    <referenceTo>Movie__c</referenceTo>
    <relationshipName>Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>